--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
@@ -61,7 +61,7 @@ m365 spo applicationcustomizer get --title "Some customizer" --webUrl https://co
 
 ## Remarks
 
-This command can be used for retrieving an application customizer from a specific site. To retrieve a tenant-wide application customizer, view our dedicated [spo tenant applicationcustomizer get](../tenant/tenant-applicationcustomizer-get.mdx) command.
+This command can be used for retrieving an application customizer from a specific site. To retrieve an application customizer that's installed tenant-wide, view our dedicated [spo tenant applicationcustomizer get](../tenant/tenant-applicationcustomizer-get.mdx) command.
 
 ## Response
 
