--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
@@ -34,7 +34,7 @@ m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/site
 
 ## Remarks
 
-This command can be used for retrieving a list of application customizers from a specific site. To retrieve a list of tenant-wide installed application customizers, view our dedicated [spo tenant applicationcustomizer list](../tenant/tenant-applicationcustomizer-list.mdx) command.
+This command can be used for retrieving a list of application customizers from a specific site. To retrieve a list of application customizers that are installed tenant-wide, view our dedicated [spo tenant applicationcustomizer list](../tenant/tenant-applicationcustomizer-list.mdx) command.
 
 ## Response
 
