--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-remove.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-remove.mdx
@@ -38,7 +38,7 @@ m365 spo applicationcustomizer remove [options]
 
 If the command finds multiple application customizers with the specified title or clientSideComponentId, it will prompt you to disambiguate which customizer it should remove, listing the discovered IDs.
 
-This command can be used for removing an application customizer added to a specific site. To remove a tenant-wide application installed customizer, view our dedicated [spo tenant applicationcustomizer remove](../tenant/tenant-applicationcustomizer-remove.mdx) command.
+This command can be used for removing an application customizer added to a specific site. To remove an application customizer that's installed tenant-wide, view our dedicated [spo tenant applicationcustomizer remove](../tenant/tenant-applicationcustomizer-remove.mdx) command.
 
 ## Examples
 
