--- a/docs/docs/cmd/spo/commandset/commandset-add.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-add.mdx
@@ -55,7 +55,7 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 :::
 
-This command can be used for configuring ListView Command Sets on specific site. To configure a tenant-wide ListView Command Set, view our dedicated [spo tenant commandset add](../tenant/tenant-commandset-add.mdx) command.
+This command can be used for configuring ListView Command Sets on a specific site. To configure a ListView Command Set tenant-wide, view our dedicated [spo tenant commandset add](../tenant/tenant-commandset-add.mdx) command.
 
 ## Examples
 
