--- a/docs/docs/cmd/spo/commandset/commandset-get.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-get.mdx
@@ -37,7 +37,7 @@ m365 spo commandset get [options]
 
 If the command finds multiple command sets with the specified title, it will prompt you to disambiguate which command set it should use, listing the discovered IDs.
 
-This command can be used for retrieving a ListView Command Set from a specific site. To retrieve a tenant-wide ListView Command Set, view our dedicated [spo tenant commandset get](../tenant/tenant-commandset-get.mdx) command.
+This command can be used for retrieving a ListView Command Set from a specific site. To retrieve a ListView Command Set that's installed tenant-wide, view our dedicated [spo tenant commandset get](../tenant/tenant-commandset-get.mdx) command.
 
 ## Examples
 
