--- a/docs/docs/cmd/spo/commandset/commandset-list.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-list.mdx
@@ -26,7 +26,7 @@ m365 spo commandset list [options]
 
 ## Remarks
 
-This command can be used for retrieving a list of ListView Command Sets from a specific site. To retrieve a list of tenant-wide ListView Command Sets, view our dedicated [spo tenant commandset list](../tenant/tenant-commandset-list.mdx) command.
+This command can be used for retrieving a list of ListView Command Sets from a specific site. To retrieve a list of ListView Command Sets that are installed tenant-wide, view our dedicated [spo tenant commandset list](../tenant/tenant-commandset-list.mdx) command.
 
 ## Examples
 
