--- a/docs/docs/cmd/spo/commandset/commandset-remove.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-remove.mdx
@@ -36,7 +36,7 @@ m365 spo commandset remove [options]
 
 ## Remarks
 
-This command can be used for removing a ListView Command Set from a specific site. To remove a tenant-wide installed ListView Command Set, view our dedicated [spo tenant commandset remove](../tenant/tenant-commandset-remove.mdx) command.
+This command can be used for removing a ListView Command Set from a specific site. To remove a ListView Command Set that's installed tenant-wide, view our dedicated [spo tenant commandset remove](../tenant/tenant-commandset-remove.mdx) command.
 
 ## Examples
 
