--- a/docs/docs/cmd/spo/commandset/commandset-set.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-set.mdx
@@ -62,7 +62,7 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 :::
 
-This command can be used for updating a ListView Command Set on a specific site. To update a tenant-wide installed ListView Command Set, view our dedicated [spo tenant commandset set](../tenant/tenant-commandset-set.mdx) command.
+This command can be used for updating a ListView Command Set on a specific site. To update a ListView Command Set that's installed tenant-wide, view our dedicated [spo tenant commandset set](../tenant/tenant-commandset-set.mdx) command.
 
 ## Examples
 
