--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-add.mdx
@@ -50,7 +50,7 @@ To use this command, you need to be a SharePoint Admin.
 
 :::
 
-This command can be used for configuring tenant-wide application customizer. To configure an application customizer on a specific site, view our dedicated [spo applicationcustomizer add](../applicationcustomizer/applicationcustomizer-add.mdx) command.
+This command can be used for configuring a tenant-wide application customizer. To configure an application customizer on a specific site, view our dedicated [spo applicationcustomizer add](../applicationcustomizer/applicationcustomizer-add.mdx) command.
 
 ## Examples
 
