--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-get.mdx
@@ -49,7 +49,7 @@ m365 spo tenant applicationcustomizer get --clientSideComponentId 7096cded-b83d-
 
 ## Remarks
 
-This command can be used for retrieving tenant-wide application customizer. To retrieve an application customizer from a specific site, view our dedicated [spo applicationcustomizer get](../applicationcustomizer/applicationcustomizer-get.mdx) command.
+This command can be used for retrieving an application customizer that's installed tenant-wide. To retrieve an application customizer from a specific site, view our dedicated [spo applicationcustomizer get](../applicationcustomizer/applicationcustomizer-get.mdx) command.
 
 ## Response
 
