--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-list.mdx
@@ -18,7 +18,7 @@ m365 spo tenant applicationcustomizer list [options]
 
 ## Remarks
 
-This command can be used for retrieving list of tenant-wide installed application customizers. To retrieve a list of application customizers from a specific site, view our dedicated [spo applicationcustomizer list](../applicationcustomizer/applicationcustomizer-list.mdx) command.
+This command can be used for retrieving a list of tenant-wide installed application customizers. To retrieve a list of application customizers from a specific site, view our dedicated [spo applicationcustomizer list](../applicationcustomizer/applicationcustomizer-list.mdx) command.
 
 ## Examples
 
