--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-remove.mdx
@@ -30,7 +30,7 @@ m365 spo tenant applicationcustomizer remove [options]
 
 ## Remarks
 
-This command can be used for removing an tenant-wide installed application customizer. To remove an application customizer from a specific site, view our dedicated [spo applicationcustomizer remove](../applicationcustomizer/applicationcustomizer-remove.mdx) command.
+This command can be used for removing an application customizer that's installed tenant-wide. To remove an application customizer from a specific site, view our dedicated [spo applicationcustomizer remove](../applicationcustomizer/applicationcustomizer-remove.mdx) command.
 
 ## Examples
 
