--- a/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
@@ -29,7 +29,7 @@ m365 spo tenant commandset get [options]
 
 ## Remarks
 
-This command can be used for retrieving a tenant-wide installed ListView Command Set. To retrieve a ListView Command Set from a specific site, view our dedicated [spo commandset get](../commandset/commandset-get.mdx) command.
+This command can be used for retrieving a ListView Command Set that's installed tenant-wide. To retrieve a ListView Command Set from a specific site, view our dedicated [spo commandset get](../commandset/commandset-get.mdx) command.
 
 ## Examples
 
