--- a/docs/docs/cmd/spo/tenant/tenant-commandset-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-list.mdx
@@ -18,7 +18,7 @@ m365 spo tenant commandset list [options]
 
 ## Remarks
 
-This command can be used for retrieving a list of tenant-wide installed ListView Command Sets. To retrieve a list of ListView Command Sets added from a specific site, view our dedicated [spo commandset list](../commandset/commandset-list.mdx) command.
+This command can be used for retrieving a list of ListView Command Sets that are installed tenant-wide. To retrieve a list of ListView Command Sets added to a specific site, view our dedicated [spo commandset list](../commandset/commandset-list.mdx) command.
 
 ## Examples
 
