--- a/docs/docs/cmd/spo/tenant/tenant-commandset-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-remove.mdx
@@ -30,7 +30,7 @@ m365 spo tenant commandset remove [options]
 
 ## Remarks
 
-This command can be used for removing a tenant-wide installed ListView Command Set. To remove a ListView Command Set from a specific site, view our dedicated [spo commandset remove](../commandset/commandset-remove.mdx) command.
+This command can be used for removing a ListView Command Set that's installed tenant-wide. To remove a ListView Command Set from a specific site, view our dedicated [spo commandset remove](../commandset/commandset-remove.mdx) command.
 
 ## Examples
 
