--- a/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
@@ -51,7 +51,7 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 :::
 
-This command can be used for updating a tenant-wide installed ListView Command Set. To update a ListView Command Set from a specific site, view our dedicated [spo commandset set](../commandset/commandset-set.mdx) command.
+This command can be used for updating a ListView Command Set that's installed tenant-wide. To update a ListView Command Set on a specific site, view our dedicated [spo commandset set](../commandset/commandset-set.mdx) command.
 
 ## Examples
 
