Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,13 @@ sidebar_position: 4
 - added ability to get the current logged-in user using [spo user get](../cmd/spo/user/user-get.mdx) [#5513](https://github.com/pnp/cli-microsoft365/issues/5513)
 - fixed error message for [spo feature disable](../cmd/spo/feature/feature-disable.mdx) and [spo feature enable](../cmd/spo/feature/feature-enable.mdx) [#5491](https://github.com/pnp/cli-microsoft365/issues/5491)
 - made the command spinner stream configurable by using errorOutput config [#5521](https://github.com/pnp/cli-microsoft365/issues/5521)
+- fixed an issue with the 'spo group member add' documentation. [#5371](https://github.com/pnp/cli-microsoft365/issues/5371)
+- included response output for the documentation of commands 'spo app' until 'spo eventreceiver'. [#3929](https://github.com/pnp/cli-microsoft365/issues/3929)
+- included response output for the documentation of commands 'spo externaluser' until 'spo hidedefaultthemes'. [#3930](https://github.com/pnp/cli-microsoft365/issues/3930)
+- updated md output in the documentation to exclude nested parameters. [#4793](https://github.com/pnp/cli-microsoft365/issues/4793)
+- added a more information section to the documentation of 'purview auditlog list'.
+- added cross references in the documentation of commandsets and applicationcustomizers. [#5546](https://github.com/pnp/cli-microsoft365/issues/5546)
+- moved collecting telemetry to a separate process.
 
 ## [v7.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
 
