--- a/docs/docs/cmd/aad/group/group-user-list.mdx
+++ b/docs/docs/cmd/aad/group/group-user-list.mdx
@@ -23,13 +23,14 @@ m365 aad group user list [options]
 
 `-r, --role [role]`
 : Filter the results to only users with the given role: `Owner`, `Member`.
-```
 
 `-p, --properties [properties]`
 : Comma-separated list of properties to retrieve.
 
 `-f, --filter [filter]`
 : OData filter to use to query the list of users with.
+```
+
 <Global />
 
 ## Examples
@@ -117,3 +118,8 @@ m365 aad group user list --groupDisplayName Developers --filter "userType eq 'Gu
 
   </TabItem>
 </Tabs>
+
+
+## More information
+
+- View the documentation to see what userproperties can be included: [https://pnp.github.io/cli-microsoft365/cmd/aad/user/user-get#more-information](https://pnp.github.io/cli-microsoft365/cmd/aad/user/user-get#more-information)
