--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -19,6 +19,11 @@ sidebar_position: 4
 - added a more information section to the documentation of 'purview auditlog list'.
 - added cross references in the documentation of commandsets and applicationcustomizers. [#5546](https://github.com/pnp/cli-microsoft365/issues/5546)
 - moved collecting telemetry to a separate process.
+- refactored codebase to async/await from spo sitedesign get until spo sitedesign task get. [#5106](https://github.com/pnp/cli-microsoft365/issues/5106)
+- refactored codebase to async/await from todo task get until yammer message add. [#5116](https://github.com/pnp/cli-microsoft365/issues/5116)
+- removed M365 group and connected site. [#5224](https://github.com/pnp/cli-microsoft365/issues/5224)
+- moved prompt output to stderr. [#5489](https://github.com/pnp/cli-microsoft365/issues/5489)
+- updated package keywords. [#5433](https://github.com/pnp/cli-microsoft365/issues/5433)
 
 ## [v7.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
 
