--- a/docs/docs/sample-scripts/teams/list-teams-decluttering/index.mdx
+++ b/docs/docs/sample-scripts/teams/list-teams-decluttering/index.mdx
@@ -12,7 +12,7 @@ tags:
 Author: [Tobias Maestrini](https://github.com/tmaestrini)
 
 Get insights about the teams in your tenant. Please keep in mind that you see only the teams that you have access to. 
-For a full overview and a complete decluttering experience, the calling user has to be admin rights in SPO and Teams.
+For a full overview and a complete decluttering experience, the calling user needs to have admin rights in SPO and Teams.
 
 === "PowerShell"
 
