Updates contributing script sample docs

--- a/docs/docs/contribute/script-sample/new-script-sample.mdx
+++ b/docs/docs/contribute/script-sample/new-script-sample.mdx
@@ -93,23 +93,31 @@ tags:
   - libraries
 ---
 
-# Cool sample to add multiple lists in a sites
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+# Cool sample to add multiple lists in a site
 
 Author: [author name](https://link)
 
 Short description of the sample functionality.
 
-=== "PowerShell"
+<Tabs>
+  <TabItem value="PowerShell">
 
     ```powershell
-    # powershell script
+    # Put your PowerShell script here
     ```
 
-=== "Bash"
+  </TabItem>
+  <TabItem value="Bash">
 
     ```bash
-    # CLI for Microsoft 365 script
+    # Put your Bash script here
     ```
+
+  </TabItem>
+</Tabs>
 ```
 
 ## Next step
