Updates contributing docs adding codespaces and dev container page. Closes #5206

--- a/docs/docs/contribute/contributing-guide.mdx
+++ b/docs/docs/contribute/contributing-guide.mdx
@@ -33,7 +33,7 @@ Typos are embarrassing! Most PRs that fix typos will be accepted immediately. To
 
 ## Contribution paths
 
-Before you start contributing, it's important to ensure that your environment is set up correctly. You can refer to the extensive guide on how to achieve this: [Setting up your environment](./environment-setup.mdx).
+Before you start contributing, it's important to ensure that your environment is set up correctly. We recommend you to use GitHub Codespaces or our dev container described in this guide: [GitHub Codespaces & Visual Studio Remote Development Container](./github-codespaces-and-devcontainer.mdx). Alternatively, you can refer to the extensive guide on how to achieve this locally: [Setting up your environment](./environment-setup.mdx).
 
 ### Adding a new command
 
