--- a/docs/docs/contribute/environment-setup.mdx
+++ b/docs/docs/contribute/environment-setup.mdx
@@ -8,6 +8,12 @@ Before you start contributing to this project, you will need **node@18** and **n
 
 :::
 
+:::tip
+
+To avoid having to install all dependencies by hand you can use Github Codespaces or our dev container. More information can be found under [GitHub Codespaces & Visual Studio Remote Development Container](./github-codespaces-and-devcontainer.mdx).
+
+:::
+
 ## Getting your local version of the CLI
 
 ### Setting up your GitHub fork
