--- a/docs/docs/cmd/spo/site/site-add.mdx
+++ b/docs/docs/cmd/spo/site/site-add.mdx
@@ -72,6 +72,9 @@ m365 spo site add [options]
 `--removeDeletedSite`
 : Set, to remove existing deleted site with the same URL from the Recycle Bin  (applies to type ClassicSite)
 
+`--withAppCatalog`
+: Set, to create a site collection app catalog on the newly created site.
+
 `--wait`
 : Wait for the site to be provisioned before completing the command  (applies to type ClassicSite)
 ```
@@ -132,6 +135,12 @@ Create modern team site with the specified users as owners
 m365 spo site add --alias team1 --title "Team 1" --owners "steve@contoso.com, bob@contoso.com"
 ```
 
+Create modern team site and enable site collection app catalog
+
+```sh
+m365 spo site add --alias team1 --title "Team 1" --withAppCatalog
+```
+
 Create communication site using the Topic design
 
 ```sh
@@ -162,6 +171,12 @@ Create communication site using the Blank design with description and classifica
 m365 spo site add --type CommunicationSite --url https://contoso.sharepoint.com/sites/marketing --title Marketing --description Site of the marketing department --classification MBI --siteDesign Blank
 ```
 
+Create communication site and enable site collection app catalog
+
+```sh
+m365 spo site add --type CommunicationSite --url https://contoso.sharepoint.com/sites/marketing --title Marketing --withAppCatalog
+```
+
 Create new classic site collection using the Team site template. Set time zone to `UTC+01:00`. Don't wait for the site provisioning to complete
 
 ```sh
@@ -178,6 +193,12 @@ Create new classic site collection using the Team site template. Set time zone t
 
 ```sh
 m365 spo site add --type ClassicSite --url https://contoso.sharepoint.com/sites/team --title Team --owners admin@contoso.onmicrosoft.com --timeZone 4 --webTemplate STS#0 --removeDeletedSite --wait
+```
+
+Create new classic site and enable site collection app catalog
+
+```sh
+m365 spo site add --type ClassicSite --url https://contoso.sharepoint.com/sites/team --title Team --owners admin@contoso.onmicrosoft.com --timeZone 4 --webTemplate STS#0 --withAppCatalog
 ```
 
 ## Response
