Updates documentation for 'spo field get'

--- a/docs/docs/cmd/spo/field/field-get.mdx
+++ b/docs/docs/cmd/spo/field/field-get.mdx
@@ -31,7 +31,7 @@ m365 spo field get [options]
 : The ID of the field to retrieve. Specify `id` or `title` but not both.
 
 `-t, --title [title]`
-: The display name (case-sensitive) of the field to remove. Specify `id` or `title` but not both.
+: The display name (case-sensitive) of the field to retrieve. Specify `id` or `title` but not both.
 ```
 
 <Global />
