Updates documentation with correct cmder url

--- a/docs/docs/user-guide/completion.mdx
+++ b/docs/docs/user-guide/completion.mdx
@@ -9,7 +9,7 @@ To help you use its commands, CLI for Microsoft 365 offers you the ability to au
 
 ## Clink (cmder)
 
-On Windows, the CLI for Microsoft 365 offers support for completing commands in [cmder](http://cmder.net) and other shells using [Clink](https://mridgers.github.io/clink/).
+On Windows, the CLI for Microsoft 365 offers support for completing commands in [cmder](http://cmder.app) and other shells using [Clink](https://mridgers.github.io/clink/).
 
 ### Enable Clink completion
 
