--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,6 +6,12 @@ sidebar_position: 4
 
 ## v7.1.0 (beta)
 
+### New commands
+
+**Azure Active Directory**
+
+- [aad group user list](../cmd/aad/group/group-user-list.mdx) - lists users of a specific Azure AD group [#5469](https://github.com/pnp/cli-microsoft365/issues/5469)
+
 ### Changes
 
 - added new eslint rule: Prevent usage of 'ByServerRelativeUrl' endpoint [#5333](https://github.com/pnp/cli-microsoft365/issues/5333)
@@ -24,6 +30,9 @@ sidebar_position: 4
 - removed M365 group and connected site. [#5224](https://github.com/pnp/cli-microsoft365/issues/5224)
 - moved prompt output to stderr. [#5489](https://github.com/pnp/cli-microsoft365/issues/5489)
 - updated package keywords. [#5433](https://github.com/pnp/cli-microsoft365/issues/5433)
+- enhances 'cli doctor' to list scopes by resource. [#5487](https://github.com/pnp/cli-microsoft365/issues/5487)
+- updates documentation with correct cmder url
+- updates documentation for 'spo field get'
 
 ## [v7.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
 
