Extends 'external connection schema add' with wait. Closes #5532

--- a/docs/docs/cmd/external/connection/connection-schema-add.mdx
+++ b/docs/docs/cmd/external/connection/connection-schema-add.mdx
@@ -24,6 +24,9 @@ m365 search externalconnection schema add
 
 `-s, --schema [schema]`
 : The schema object to be added.
+
+`--wait`
+: Wait for the schema to be added before completing the command.
 ```
 
 <Global />
@@ -36,6 +39,16 @@ Adds a new schema to a specific external connection.
 m365 external connection schema add --externalConnectionId 'CliConnectionId' --schema '{"baseType":"microsoft.graph.externalItem","properties":[{"name":"ticketTitle","type":"String","isSearchable":"true","isRetrievable":"true","labels":["title"]},{"name":"priority","type":"String","isQueryable":"true","isRetrievable":"true","isSearchable":"false"},{"name":"assignee","type":"String","isRetrievable":"true"}]}'
 ```
 
+Adds a new schema to a specific external connection and wait for its provisioning to complete.
+
+```sh
+m365 external connection schema add --externalConnectionId 'CliConnectionId' --schema '{"baseType":"microsoft.graph.externalItem","properties":[{"name":"ticketTitle","type":"String","isSearchable":"true","isRetrievable":"true","labels":["title"]},{"name":"priority","type":"String","isQueryable":"true","isRetrievable":"true","isSearchable":"false"},{"name":"assignee","type":"String","isRetrievable":"true"}]}' --wait
+```
+
 ## Response
 
-The command won't return a response on success.
+Upon executing the command, you'll receive the job status URL. This URL enables manual checking of the job's progress if automated polling fails or for interactive monitoring purposes.
+
+```text
+"https://graph.microsoft.com/v1.0/external/connections/MyApp/operations/795b6888-4093-0fe7-6270-ddbcac9ebd3a"
+```
