Extends 'external connection schema add' with wait. Closes #5532

--- a/docs/docs/cmd/external/connection/connection-schema-add.mdx
+++ b/docs/docs/cmd/external/connection/connection-schema-add.mdx
@@ -24,6 +24,9 @@ m365 search externalconnection schema add
 
 `-s, --schema [schema]`
 : The schema object to be added.
+
+`--wait`
+: Wait for the schema to be added before completing the command.
 ```
 
 <Global />
@@ -34,6 +37,12 @@ Adds a new schema to a specific external connection.
 
 ```sh
 m365 external connection schema add --externalConnectionId 'CliConnectionId' --schema '{"baseType":"microsoft.graph.externalItem","properties":[{"name":"ticketTitle","type":"String","isSearchable":"true","isRetrievable":"true","labels":["title"]},{"name":"priority","type":"String","isQueryable":"true","isRetrievable":"true","isSearchable":"false"},{"name":"assignee","type":"String","isRetrievable":"true"}]}'
+```
+
+Adds a new schema to a specific external connection and wait for its provisioning to complete.
+
+```sh
+m365 external connection schema add --externalConnectionId 'CliConnectionId' --schema '{"baseType":"microsoft.graph.externalItem","properties":[{"name":"ticketTitle","type":"String","isSearchable":"true","isRetrievable":"true","labels":["title"]},{"name":"priority","type":"String","isQueryable":"true","isRetrievable":"true","isSearchable":"false"},{"name":"assignee","type":"String","isRetrievable":"true"}]}' --wait
 ```
 
 ## Response
