Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -30,9 +30,12 @@ sidebar_position: 4
 - removed M365 group and connected site. [#5224](https://github.com/pnp/cli-microsoft365/issues/5224)
 - moved prompt output to stderr. [#5489](https://github.com/pnp/cli-microsoft365/issues/5489)
 - updated package keywords. [#5433](https://github.com/pnp/cli-microsoft365/issues/5433)
-- enhances 'cli doctor' to list scopes by resource. [#5487](https://github.com/pnp/cli-microsoft365/issues/5487)
-- updates documentation with correct cmder url
-- updates documentation for 'spo field get'
+- enhanced 'cli doctor' to list scopes by resource. [#5487](https://github.com/pnp/cli-microsoft365/issues/5487)
+- updated documentation with correct cmder url
+- updated documentation for 'spo field get'
+- fixed bug with authType browser. [#5578](https://github.com/pnp/cli-microsoft365/issues/5487)
+- updated the spinner for setup prompts. [#5598](https://github.com/pnp/cli-microsoft365/issues/5598)
+- updated contributing script sample docs
 
 ## [v7.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
 
