--- a/docs/docs/cmd/spo/listitem/listitem-batch-add.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-batch-add.mdx
@@ -57,6 +57,21 @@ Add a batch of items to a list retrieved by title in a specific site
 m365 spo listitem batch add --filePath "C:\Path\To\Csv\CsvFile.csv" --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle "Demo List"
 ```
 
+Add a batch of items to a list retrieved by title in a specific site using csv content
+
+```sh
+$obj = [PSCustomObject]@{
+  Title = "Item A"
+  NumberField = 10
+}
+
+$csv = ConvertTo-Csv -InputObject $obj -Delimiter "," -NoTypeInformation
+
+$csvContent = $($csv | Out-String).Replace('"','\"')
+
+m365 spo listitem batch add --csvContent $csvContent --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle "Demo List"
+```
+
 Add a batch of items to a list retrieved by Id in a specific site
 
 ```sh
