Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,23 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.2.0 (beta)
+
+### New commands
+
+**Azure Active Directory**
+
+- [aad administrativeunit add](../cmd/aad/administrativeunit/administrativeunit-add.mdx) - creates an administrative unit in Azure AD [#5572](https://github.com/pnp/cli-microsoft365/issues/5572)
+- [aad administrativeunit get](../cmd/aad/administrativeunit/administrativeunit-get.mdx) - retrieves details for an administrative unit in Azure AD [#5582](https://github.com/pnp/cli-microsoft365/issues/5582)
+- [aad administrativeunit list](../cmd/aad/administrativeunit/administrativeunit-list.mdx) - retrieves a list of administrative units in Azure AD [#5569](https://github.com/pnp/cli-microsoft365/issues/5569)
+- [aad administrativeunit remove](../cmd/aad/administrativeunit/administrativeunit-remove.mdx) - removes an administrative unit from Azure AD [#5595](https://github.com/pnp/cli-microsoft365/issues/5595)
+
+### Changes
+
+- fixes command sorting. [#5606](https://github.com/pnp/cli-microsoft365/issues/5606)
+- implements disambiguation prompts in missing places. [#5490](https://github.com/pnp/cli-microsoft365/issues/5490)
+- adds a disambiguation prompt to getGroupIdByDisplayName. [#5592](https://github.com/pnp/cli-microsoft365/issues/5592)
+
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
 ### New commands
