Adds new contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -438,6 +438,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'martinlingstuyl'
   },
   {
+    name: 'Martin Macháček',
+    company: 'Edhouse',
+    github: 'MartinM85',
+    x: '@machym_'
+  },
+  {
     name: 'Mathijs Verbeeck',
     company: 'Xylos',
     github: 'MathijsVerbeeck',
