Fixes sample script contribution guide

--- a/docs/docs/contribute/script-sample/new-script-sample.mdx
+++ b/docs/docs/contribute/script-sample/new-script-sample.mdx
@@ -86,7 +86,7 @@ All places marked with `<>` are placeholders that should be populated accordingl
 
 The sample file should contain a title, a short description, an author, tags, and the script in code blocks. To help you get started you may use the template below.
 
-```md title="index.mdx"
+````md title="index.mdx"
 ---
 tags:
   - provisioning
@@ -105,20 +105,20 @@ Short description of the sample functionality.
 <Tabs>
   <TabItem value="PowerShell">
 
-    ```powershell
-    # Put your PowerShell script here
-    ```
+  ```powershell
+  # Put your PowerShell script here
+  ```
 
   </TabItem>
   <TabItem value="Bash">
 
-    ```bash
-    # Put your Bash script here
-    ```
+  ```bash
+  # Put your Bash script here
+  ```
 
   </TabItem>
 </Tabs>
-```
+````
 
 ## Next step
 
