--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -17,9 +17,12 @@ sidebar_position: 4
 
 ### Changes
 
-- fixes command sorting. [#5606](https://github.com/pnp/cli-microsoft365/issues/5606)
-- implements disambiguation prompts in missing places. [#5490](https://github.com/pnp/cli-microsoft365/issues/5490)
-- adds a disambiguation prompt to getGroupIdByDisplayName. [#5592](https://github.com/pnp/cli-microsoft365/issues/5592)
+- fixes command sorting [#5606](https://github.com/pnp/cli-microsoft365/issues/5606)
+- implements disambiguation prompts in missing places [#5490](https://github.com/pnp/cli-microsoft365/issues/5490)
+- adds a disambiguation prompt to getGroupIdByDisplayName [#5592](https://github.com/pnp/cli-microsoft365/issues/5592)
+- extended 'spfx project upgrade' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
+- extended 'spfx doctor' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
+- extended 'spfx project doctor' with support for v1.18.1.-rc.0 [#5593](https://github.com/pnp/cli-microsoft365/issues/5593)
 
 ## [v7.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.1.0)
 
