Fixes 'aad administrativeunit' flags

--- a/docs/docs/cmd/aad/administrativeunit/administrativeunit-add.mdx
+++ b/docs/docs/cmd/aad/administrativeunit/administrativeunit-add.mdx
@@ -21,7 +21,7 @@ m365 aad administrativeunit add [options]
 `-d, --description [description]`
 : Description for the administrative unit.
 
-`--hiddenMembership [hiddenMembership]`
+`--hiddenMembership`
 : Indicates whether the administrative unit and its members are hidden.
 ```
 
@@ -113,3 +113,7 @@ m365 aad administrativeunit add --displayName 'Marketing Division' --hiddenMembe
 
   </TabItem>
 </Tabs>
+
+## More information
+
+- Administrative units: https://learn.microsoft.com/entra/identity/role-based-access-control/administrative-units
