--- a/docs/docs/cmd/aad/administrativeunit/administrativeunit-get.mdx
+++ b/docs/docs/cmd/aad/administrativeunit/administrativeunit-get.mdx
@@ -96,3 +96,7 @@ m365 aad administrativeunit get --displayName 'Marketing Division'
 
   </TabItem>
 </Tabs>
+
+## More information
+
+- Administrative units: https://learn.microsoft.com/entra/identity/role-based-access-control/administrative-units
