--- a/docs/docs/cmd/aad/administrativeunit/administrativeunit-remove.mdx
+++ b/docs/docs/cmd/aad/administrativeunit/administrativeunit-remove.mdx
@@ -19,7 +19,7 @@ m365 aad administrativeunit remove [options]
 `-n, --displayName [displayName]`
 : The display name of the administrative unit. Specify either `id` or `displayName` but not both.
 
-`-f, --force [force]`
+`-f, --force`
 : Don't prompt for confirmation.
 ```
 
@@ -50,3 +50,7 @@ m365 aad administrativeunit remove --displayName 'Marketing Division'
 ## Response
 
 The command won't return a response on success
+
+## More information
+
+- Administrative units: https://learn.microsoft.com/entra/identity/role-based-access-control/administrative-units
