--- a/docs/docs/cmd/aad/administrativeunit/administrativeunit-list.mdx
+++ b/docs/docs/cmd/aad/administrativeunit/administrativeunit-list.mdx
@@ -81,3 +81,7 @@ m365 aad administrativeunit list
 
   </TabItem>
 </Tabs>
+
+## More information
+
+- Administrative units: https://learn.microsoft.com/entra/identity/role-based-access-control/administrative-units
